[gd_scene load_steps=7 format=2]

[ext_resource path="res://project_nexus.gd" type="Script" id=1]
[ext_resource path="res://nvidia_ai_bridge.gd" type="Script" id=2]
[ext_resource path="res://ocr_processor.gd" type="Script" id=3]
[ext_resource path="res://neural_evolution.gd" type="Script" id=4]
[ext_resource path="res://api_orchestrator.gd" type="Script" id=5]
[ext_resource path="res://turn_system.gd" type="Script" id=6]

[node name="MainScene" type="Node"]

[node name="ProjectNexus" type="Node" parent="."]
script = ExtResource( 1 )
day_challenge_hours = 24
turns_per_cycle = 12
offline_mode = true
auto_save_interval = 300
memory_enabled = true
system_name = "ProjectNexus"

[node name="NvidiaAIBridge" type="Node" parent="ProjectNexus"]
script = ExtResource( 2 )
model_path = "res://ai_models/"
cuda_enabled = true
offline_mode = true
max_batch_size = 4

[node name="OCRProcessor" type="Node" parent="ProjectNexus"]
script = ExtResource( 3 )
auto_capture = true
capture_interval = 5.0
min_confidence = 0.65
history_size = 20

[node name="NeuralEvolution" type="Node" parent="ProjectNexus"]
script = ExtResource( 4 )
learning_rate = 0.01
mutation_rate = 0.05
hidden_layers = [ 32, 16 ]
input_features = 64
output_classes = 8
batch_size = 16
generation_limit = 100
fitness_threshold = 0.95
auto_save = true
save_interval = 10

[node name="APIOrchestrator" type="Node" parent="ProjectNexus"]
script = ExtResource( 5 )
config_path = "res://config/api/"
auto_retry = true
max_retries = 3
retry_delay = 2.0
offline_cache_enabled = true
offline_cache_expiry = 86400

[node name="TurnSystem" type="Node" parent="ProjectNexus"]
script = ExtResource( 6 )
max_turns = 12
auto_start_next_turn = false
auto_start_next_cycle = false
break_duration = 300
turn_timeout = 600

[node name="DayChallengeTimer" type="Timer" parent="ProjectNexus"]
wait_time = 86400.0
one_shot = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Panel" parent="UI/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemNameLabel" type="Label" parent="UI/VBoxContainer/TopBar/HBoxContainer"]
margin_top = 13.0
margin_right = 200.0
margin_bottom = 27.0
rect_min_size = Vector2( 200, 0 )
text = "ProjectNexus"
align = 1

[node name="StatusLabel" type="Label" parent="UI/VBoxContainer/TopBar/HBoxContainer"]
margin_left = 204.0
margin_top = 13.0
margin_right = 820.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "System Status: Initializing"
align = 1

[node name="TurnLabel" type="Label" parent="UI/VBoxContainer/TopBar/HBoxContainer"]
margin_left = 824.0
margin_top = 13.0
margin_right = 1024.0
margin_bottom = 27.0
rect_min_size = Vector2( 200, 0 )
text = "Turn: 0 / 12  Cycle: 0"
align = 1

[node name="MainContent" type="HSplitContainer" parent="UI/VBoxContainer"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="LeftPanel" type="Panel" parent="UI/VBoxContainer/MainContent"]
margin_right = 300.0
margin_bottom = 556.0
rect_min_size = Vector2( 300, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/MainContent/LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemTitle" type="Label" parent="UI/VBoxContainer/MainContent/LeftPanel/VBoxContainer"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "System Components"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/VBoxContainer/MainContent/LeftPanel/VBoxContainer"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 556.0
size_flags_vertical = 3

[node name="ComponentList" type="VBoxContainer" parent="UI/VBoxContainer/MainContent/LeftPanel/VBoxContainer/ScrollContainer"]
margin_right = 300.0
margin_bottom = 170.0
size_flags_horizontal = 3

[node name="NvidiaStatus" type="Label" parent="UI/VBoxContainer/MainContent/LeftPanel/VBoxContainer/ScrollContainer/ComponentList"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "NvidiaAIBridge: Initializing"

[node name="OCRStatus" type="Label" parent="UI/VBoxContainer/MainContent/LeftPanel/VBoxContainer/ScrollContainer/ComponentList"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )
text = "OCRProcessor: Initializing"

[node name="NeuralStatus" type="Label" parent="UI/VBoxContainer/MainContent/LeftPanel/VBoxContainer/ScrollContainer/ComponentList"]
margin_top = 68.0
margin_right = 300.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 30 )
text = "NeuralEvolution: Initializing"

[node name="APIStatus" type="Label" parent="UI/VBoxContainer/MainContent/LeftPanel/VBoxContainer/ScrollContainer/ComponentList"]
margin_top = 102.0
margin_right = 300.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 30 )
text = "APIOrchestrator: Initializing"

[node name="TurnStatus" type="Label" parent="UI/VBoxContainer/MainContent/LeftPanel/VBoxContainer/ScrollContainer/ComponentList"]
margin_top = 136.0
margin_right = 300.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 30 )
text = "TurnSystem: Initializing"

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer/MainContent/LeftPanel/VBoxContainer/ScrollContainer/ComponentList"]
margin_top = 170.0
margin_right = 300.0
margin_bottom = 174.0

[node name="MainPanel" type="Panel" parent="UI/VBoxContainer/MainContent"]
margin_left = 312.0
margin_right = 1024.0
margin_bottom = 556.0

[node name="TabContainer" type="TabContainer" parent="UI/VBoxContainer/MainContent/MainPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dashboard" type="Tabs" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalPanel" type="Panel" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer"]
margin_right = 704.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="GoalLabel" type="Label" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/GoalPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Daily Goal: Initializing..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsGrid" type="GridContainer" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer"]
margin_top = 54.0
margin_right = 704.0
margin_bottom = 480.0
size_flags_vertical = 3
columns = 2

[node name="SystemStatsPanel" type="Panel" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/StatsGrid"]
margin_right = 350.0
margin_bottom = 213.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/StatsGrid/SystemStatsPanel"]
anchor_right = 1.0
margin_bottom = 20.0
text = "System Statistics"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnStatsPanel" type="Panel" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/StatsGrid"]
margin_left = 354.0
margin_right = 704.0
margin_bottom = 213.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/StatsGrid/TurnStatsPanel"]
anchor_right = 1.0
margin_bottom = 20.0
text = "Turn Statistics"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NeuralStatsPanel" type="Panel" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/StatsGrid"]
margin_top = 217.0
margin_right = 350.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/StatsGrid/NeuralStatsPanel"]
anchor_right = 1.0
margin_bottom = 20.0
text = "Neural Statistics"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemoryStatsPanel" type="Panel" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/StatsGrid"]
margin_left = 354.0
margin_top = 217.0
margin_right = 704.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/StatsGrid/MemoryStatsPanel"]
anchor_right = 1.0
margin_bottom = 20.0
text = "Memory Statistics"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlPanel" type="Panel" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer"]
margin_top = 484.0
margin_right = 704.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 36 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/ControlPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/ControlPanel/HBoxContainer"]
margin_right = 100.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
text = "Start Turn"

[node name="EndButton" type="Button" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/ControlPanel/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
text = "End Turn"

[node name="Spacer" type="Control" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/ControlPanel/HBoxContainer"]
margin_left = 208.0
margin_right = 594.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/ControlPanel/HBoxContainer"]
margin_left = 598.0
margin_right = 694.0
margin_bottom = 36.0
rect_min_size = Vector2( 96, 0 )
text = "Save State"

[node name="Patterns" type="Tabs" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Memory" type="Tabs" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="OCR" type="Tabs" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="API" type="Tabs" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Settings" type="Tabs" parent="UI/VBoxContainer/MainContent/MainPanel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BottomBar" type="Panel" parent="UI/VBoxContainer"]
margin_top = 604.0
margin_right = 1024.0
margin_bottom = 640.0
rect_min_size = Vector2( 0, 36 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/BottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="UI/VBoxContainer/BottomBar/HBoxContainer"]
margin_top = 11.0
margin_right = 507.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "System Time: --:--:--"

[node name="StatusLabel" type="Label" parent="UI/VBoxContainer/BottomBar/HBoxContainer"]
margin_left = 511.0
margin_top = 11.0
margin_right = 1014.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Ready"
align = 2

[connection signal="timeout" from="ProjectNexus/DayChallengeTimer" to="ProjectNexus" method="_on_day_challenge_timer_timeout"]
[connection signal="pressed" from="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/ControlPanel/HBoxContainer/StartButton" to="ProjectNexus" method="start_next_turn"]
[connection signal="pressed" from="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/ControlPanel/HBoxContainer/EndButton" to="ProjectNexus" method="end_current_turn"]
[connection signal="pressed" from="UI/VBoxContainer/MainContent/MainPanel/TabContainer/Dashboard/VBoxContainer/ControlPanel/HBoxContainer/SaveButton" to="ProjectNexus" method="save_system_state"]