extends Node
class_name ProjectNexus

# Signals
signal day_challenge_started(goal, duration)
signal day_challenge_completed(results)
signal system_status_updated(status)
signal memory_pattern_detected(pattern, confidence)
signal system_initialized(components)

# Core systems
var nvidia_bridge = null
var ocr_processor = null
var neural_evolution = null
var api_orchestrator = null
var turn_system = null

# Configuration
export var day_challenge_hours = 24
export var turns_per_cycle = 12
export var offline_mode = true
export var auto_save_interval = 300  # 5 minutes
export var memory_enabled = true
export var system_name = "ProjectNexus"

# System state
var is_initialized = false
var components_ready = {}
var last_save_time = 0
var daily_goal = ""
var memory_database = {}
var system_status = {
    "status": "initializing",
    "last_update_time": 0,
    "components_ready": 0,
    "total_components": 5,
    "errors": []
}

# Auto-save timer
var auto_save_timer = null

func _ready():
    # Setup auto-save timer
    auto_save_timer = Timer.new()
    auto_save_timer.wait_time = auto_save_interval
    auto_save_timer.one_shot = false
    auto_save_timer.connect("timeout", self, "_on_auto_save_timer_timeout")
    add_child(auto_save_timer)
    
    # Initialize core systems
    call_deferred("initialize_systems")

func _process(delta):
    # Check if all components are initialized
    if !is_initialized and _check_all_components_ready():
        _complete_initialization()

func initialize_systems():
    # Update status
    _update_system_status("initializing", "Starting system initialization")
    
    # Initialize NVIDIA AI Bridge
    initialize_nvidia_ai()
    
    # Initialize OCR system
    initialize_ocr_system()
    
    # Initialize neural network
    initialize_neural_network()
    
    # Initialize API connections
    initialize_api_connections()
    
    # Initialize turn system
    initialize_turn_system()
    
    # Start auto-save timer
    auto_save_timer.start()
    
    print("Core systems initialization started")

func initialize_nvidia_ai():
    # Get the NvidiaAIBridge node
    nvidia_bridge = $NvidiaAIBridge
    
    if nvidia_bridge == null:
        _report_error("NvidiaAIBridge node not found")
        return
    
    # Connect signals
    nvidia_bridge.connect("ai_process_complete", self, "_on_ai_process_complete")
    
    # Initialize
    var success = nvidia_bridge.initialize_local_models("res://ai_models/")
    components_ready["nvidia_bridge"] = success
    
    if success:
        print("Nvidia AI Bridge initialized for offline processing")
    else:
        _report_error("Failed to initialize Nvidia AI Bridge")

func initialize_ocr_system():
    # Get the OCRProcessor node
    ocr_processor = $OCRProcessor
    
    if ocr_processor == null:
        _report_error("OCRProcessor node not found")
        return
    
    # Connect signals
    ocr_processor.connect("text_recognized", self, "_on_text_recognized")
    
    # Set AI bridge connection
    if nvidia_bridge != null:
        ocr_processor.set_ai_bridge(nvidia_bridge)
    
    # Configure OCR
    ocr_processor.set_capture_interval(5.0)
    
    components_ready["ocr_processor"] = true
    print("OCR system ready to analyze project visuals")

func initialize_neural_network():
    # Get the NeuralEvolution node
    neural_evolution = $NeuralEvolution
    
    if neural_evolution == null:
        _report_error("NeuralEvolution node not found")
        return
    
    # Connect signals
    neural_evolution.connect("evolution_step", self, "_on_network_evolved")
    neural_evolution.connect("pattern_detected", self, "_on_pattern_detected")
    
    # Try to load previous network state
    var loaded = neural_evolution.load_network_state("user://network_state.nn")
    
    if !loaded:
        # Initialize with default architecture
        neural_evolution.set_layer_architecture([64, 32, 16, 8])
        neural_evolution.set_learning_rate(0.01)
    
    components_ready["neural_evolution"] = true
    print("Neural network evolution system initialized")

func initialize_api_connections():
    # Get the APIOrchestrator node
    api_orchestrator = $APIOrchestrator
    
    if api_orchestrator == null:
        _report_error("APIOrchestrator node not found")
        return
    
    # Connect signals
    api_orchestrator.connect("api_response", self, "_on_api_response")
    api_orchestrator.connect("api_error", self, "_on_api_error")
    
    # Initialize API connections
    var apis = [
        {"name": "claude", "config": "config://apis/claude_config.json"},
        {"name": "openai", "config": "config://apis/openai_config.json"},
        {"name": "google_drive", "config": "config://apis/gdrive_config.json"}
    ]
    
    var success_count = 0
    for api in apis:
        if api_orchestrator.add_api_connection(api.name, api.config):
            success_count += 1
    
    components_ready["api_orchestrator"] = success_count > 0
    print("Multi-API orchestration system ready with ", success_count, " connections")

func initialize_turn_system():
    # Get the TurnSystem node
    turn_system = $TurnSystem
    
    if turn_system == null:
        _report_error("TurnSystem node not found")
        return
    
    # Connect signals
    turn_system.connect("turn_started", self, "_on_turn_started")
    turn_system.connect("turn_completed", self, "_on_turn_completed")
    turn_system.connect("cycle_completed", self, "_on_cycle_completed")
    turn_system.connect("break_time_started", self, "_on_break_time_started")
    
    # Configure turn system
    turn_system.set_max_turns(turns_per_cycle)
    
    # Try to load previous session state
    var loaded = turn_system.load_session_state()
    
    components_ready["turn_system"] = true
    print("12-turn system initialized")

func _check_all_components_ready():
    # Check if all components are ready
    for component in components_ready:
        if !components_ready[component]:
            return false
    
    # Check if we have all required components
    var required_components = ["nvidia_bridge", "ocr_processor", "neural_evolution", 
                               "api_orchestrator", "turn_system"]
    
    for component in required_components:
        if !components_ready.has(component):
            return false
    
    return true

func _complete_initialization():
    # Mark system as initialized
    is_initialized = true
    
    # Update status
    _update_system_status("ready", "System initialization complete")
    
    # Emit initialized signal
    emit_signal("system_initialized", components_ready.keys())
    
    # Start day challenge if not already started
    if turn_system.current_cycle == 0 and turn_system.current_turn == 0:
        start_day_challenge()
    
    print("ProjectNexus initialization complete")

func start_day_challenge():
    # Set up the day challenge timer
    $DayChallengeTimer.wait_time = day_challenge_hours * 3600
    $DayChallengeTimer.start()
    
    # Generate daily goal
    set_daily_goal()
    
    # Start the turn system
    turn_system.start_session()
    
    # Update status
    _update_system_status("active", "Day challenge started")
    
    # Emit signal
    emit_signal("day_challenge_started", daily_goal, day_challenge_hours)
    
    print("24-hour challenge started with new daily goal")

func set_daily_goal():
    # Generate a daily goal or load existing one
    if daily_goal.empty():
        if offline_mode:
            # Generate locally
            var goals = [
                "Develop a new feature for the system",
                "Improve pattern recognition accuracy",
                "Refine the turn system experience",
                "Enhance the word visualization tools",
                "Optimize neural network architecture",
                "Implement advanced memory persistence",
                "Create new dimensional access protocols",
                "Expand the symbolic language processing"
            ]
            
            daily_goal = goals[randi() % goals.size()]
        else:
            # Use API to generate (would normally use api_orchestrator)
            daily_goal = "Connect realms through dimensional bridges"
    
    print("Daily goal set: ", daily_goal)

func _on_day_challenge_timer_timeout():
    # End the day challenge
    var results = {
        "cycles_completed": turn_system.get_session_stats().cycles_completed,
        "turns_completed": turn_system.get_session_stats().turns_completed,
        "active_time": turn_system.get_session_stats().active_time,
        "goal_achieved": _evaluate_goal_achievement()
    }
    
    # Update status
    _update_system_status("challenge_complete", "Day challenge completed")
    
    # Emit signal
    emit_signal("day_challenge_completed", results)
    
    print("24-hour challenge completed")

func _evaluate_goal_achievement():
    # Simple placeholder for goal achievement evaluation
    return turn_system.get_session_stats().turns_completed >= turns_per_cycle

func _on_auto_save_timer_timeout():
    # Save system state
    save_system_state()

func save_system_state():
    # Save current time
    last_save_time = OS.get_unix_time()
    
    # Save neural network state
    if neural_evolution != null:
        neural_evolution.save_network_state()
    
    # Save turn system state
    if turn_system != null:
        turn_system.save_session_state()
    
    # Save API offline cache
    if api_orchestrator != null:
        api_orchestrator.save_offline_cache()
    
    # Save memory database
    _save_memory_database()
    
    print("System state saved at: ", OS.get_datetime_from_unix_time(last_save_time))
    return true

func _save_memory_database():
    if !memory_enabled:
        return
    
    # Save memory database to file
    var file = File.new()
    var err = file.open("user://memory_database.json", File.WRITE)
    if err != OK:
        _report_error("Failed to save memory database: " + str(err))
        return false
    
    file.store_string(JSON.print(memory_database))
    file.close()
    
    return true

func _load_memory_database():
    if !memory_enabled:
        return
    
    # Load memory database from file
    var file = File.new()
    if !file.file_exists("user://memory_database.json"):
        memory_database = {}
        return
    
    var err = file.open("user://memory_database.json", File.READ)
    if err != OK:
        _report_error("Failed to load memory database: " + str(err))
        return false
    
    var json = JSON.parse(file.get_as_text())
    file.close()
    
    if json.error != OK:
        _report_error("Failed to parse memory database JSON: " + json.error_string)
        return false
    
    memory_database = json.result
    return true

func _on_ai_process_complete(result, metadata):
    # Handle AI processing result
    print("AI process complete: ", metadata.model)
    
    # You could add specific logic based on the task type
    if metadata.has("task_id"):
        # Process result based on task ID if needed
        pass

func _on_text_recognized(text, metadata):
    # Process recognized text
    print("Text recognized from ", metadata.region)
    
    # Extract features for neural network
    var features = neural_evolution.extract_features(text)
    
    # Process with neural network to detect patterns
    neural_evolution.predict_pattern(features)
    
    # Store in memory database if enabled
    if memory_enabled and text.length() > 10:
        _store_text_in_memory(text, metadata)

func _store_text_in_memory(text, metadata):
    # Create a unique ID for this memory
    var memory_id = "mem_" + str(OS.get_unix_time()) + "_" + str(randi() % 1000)
    
    # Store in memory database
    memory_database[memory_id] = {
        "text": text,
        "timestamp": OS.get_unix_time(),
        "source": metadata.region,
        "turn": turn_system.current_turn if turn_system != null else 0,
        "cycle": turn_system.current_cycle if turn_system != null else 0,
        "confidence": metadata.confidence
    }
    
    # Trim memory database if too large (keep last 1000 entries)
    if memory_database.size() > 1000:
        var oldest_id = null
        var oldest_time = OS.get_unix_time()
        
        for id in memory_database:
            if memory_database[id].timestamp < oldest_time:
                oldest_time = memory_database[id].timestamp
                oldest_id = id
        
        if oldest_id != null:
            memory_database.erase(oldest_id)
    
    # Auto-save if needed
    if memory_database.size() % 20 == 0:
        _save_memory_database()

func _on_network_evolved(generation, fitness):
    # Handle neural network evolution
    print("Neural network evolution: Generation ", generation, ", Fitness: ", fitness)
    
    # You could add specific logic based on the evolution progress
    if fitness > 0.9 and generation % 10 == 0:
        neural_evolution.save_network_state("user://network_state_gen" + str(generation) + ".nn")

func _on_pattern_detected(pattern_id, confidence, metadata):
    # Handle detected pattern
    print("Pattern detected: ", pattern_id, " (", confidence, ")")
    
    # Emit signal
    emit_signal("memory_pattern_detected", pattern_id, confidence)
    
    # Take action based on pattern
    _process_detected_pattern(pattern_id, confidence, metadata)

func _process_detected_pattern(pattern_id, confidence, metadata):
    # Example of pattern-based actions
    if confidence > 0.9:
        # High confidence patterns could trigger special actions
        pass

func _on_api_response(api_name, response, request_id):
    # Handle API response
    print("API response from: ", api_name)
    
    # Process response based on the API and request type
    # This would be implemented based on specific API usage

func _on_api_error(api_name, error, request_id):
    # Handle API error
    _report_error("API error from " + api_name + ": " + error.message)

func _on_turn_started(turn_number, turn_data):
    # Handle turn start
    print("Turn ", turn_number, " started")
    
    # Update status
    _update_system_status("turn_active", "Turn " + str(turn_number) + " active")

func _on_turn_completed(turn_number, results):
    # Handle turn completion
    print("Turn ", turn_number, " completed")
    
    # Update status
    _update_system_status("turn_complete", "Turn " + str(turn_number) + " completed")

func _on_cycle_completed(cycle_number, cycle_summary):
    # Handle cycle completion
    print("Cycle ", cycle_number, " completed")
    
    # Update status
    _update_system_status("cycle_complete", "Cycle " + str(cycle_number) + " completed")
    
    # Save system state
    save_system_state()

func _on_break_time_started(duration):
    # Handle break time start
    print("Break time started for ", duration, " seconds")
    
    # Update status
    _update_system_status("break", "Taking a break for " + str(duration) + " seconds")

func _update_system_status(status_code, status_message):
    # Update system status
    system_status.status = status_code
    system_status.last_update_time = OS.get_unix_time()
    system_status.components_ready = 0
    
    for component in components_ready:
        if components_ready[component]:
            system_status.components_ready += 1
    
    # Emit signal
    emit_signal("system_status_updated", {
        "status": status_code,
        "message": status_message,
        "time": OS.get_datetime_from_unix_time(system_status.last_update_time),
        "components_ready": system_status.components_ready,
        "total_components": system_status.total_components,
        "errors": system_status.errors.duplicate()
    })

func _report_error(error_message):
    # Add error to system status
    system_status.errors.append({
        "message": error_message,
        "time": OS.get_unix_time()
    })
    
    # Trim error list if too long
    while system_status.errors.size() > 20:
        system_status.errors.pop_front()
    
    # Print error
    printerr(error_message)
    
    # Update status
    _update_system_status(system_status.status, "Error: " + error_message)

func get_memory_by_pattern(pattern_id, limit=10):
    # Find memories associated with a specific pattern
    var matching_memories = []
    
    for memory_id in memory_database:
        var memory = memory_database[memory_id]
        
        # Use neural network to check if memory matches pattern
        var features = neural_evolution.extract_features(memory.text)
        var prediction = neural_evolution.predict(features)
        
        if prediction != null and "pattern_id" in prediction and prediction.pattern_id == pattern_id:
            matching_memories.append(memory)
            
            if matching_memories.size() >= limit:
                break
    
    return matching_memories

func get_memory_by_turn(turn_number, cycle_number=null):
    # Find memories from a specific turn
    var matching_memories = []
    
    for memory_id in memory_database:
        var memory = memory_database[memory_id]
        
        if memory.turn == turn_number and (cycle_number == null or memory.cycle == cycle_number):
            matching_memories.append(memory)
    
    return matching_memories

func get_system_status():
    # Return current system status
    return {
        "status": system_status.status,
        "message": "System is " + system_status.status,
        "initialized": is_initialized,
        "components_ready": system_status.components_ready,
        "total_components": system_status.total_components,
        "last_save_time": last_save_time,
        "current_turn": turn_system.current_turn if turn_system != null else 0,
        "current_cycle": turn_system.current_cycle if turn_system != null else 0,
        "memory_count": memory_database.size(),
        "daily_goal": daily_goal,
        "errors": system_status.errors.size()
    }

func setup_configuration_files():
    # Create default configuration files
    var config_dir = "user://config"
    var dir = Directory.new()
    
    if !dir.dir_exists(config_dir):
        dir.make_dir_recursive(config_dir)
    
    # Create API config directory
    var api_config_dir = config_dir + "/apis"
    if !dir.dir_exists(api_config_dir):
        dir.make_dir(api_config_dir)
    
    # Create default API configs
    _create_default_config_file(api_config_dir + "/claude_config.json", {
        "api_key": "YOUR_CLAUDE_API_KEY",
        "base_url": "https://api.anthropic.com",
        "version": "v1",
        "model": "claude-3-opus-20240229",
        "rate_limit": 60,
        "timeout": 30
    })
    
    _create_default_config_file(api_config_dir + "/openai_config.json", {
        "api_key": "YOUR_OPENAI_API_KEY",
        "base_url": "https://api.openai.com",
        "version": "v1",
        "model": "gpt-4",
        "rate_limit": 60,
        "timeout": 30
    })
    
    _create_default_config_file(api_config_dir + "/gdrive_config.json", {
        "api_key": "YOUR_GDRIVE_API_KEY",
        "base_url": "https://www.googleapis.com/drive/v3",
        "auth_type": "oauth2",
        "rate_limit": 60,
        "timeout": 30
    })
    
    # Create system config file
    _create_default_config_file(config_dir + "/system_config.json", {
        "day_challenge_hours": day_challenge_hours,
        "turns_per_cycle": turns_per_cycle,
        "offline_mode": offline_mode,
        "auto_save_interval": auto_save_interval,
        "memory_enabled": memory_enabled,
        "system_name": system_name,
        "neural_network": {
            "learning_rate": 0.01,
            "mutation_rate": 0.05,
            "architecture": [64, 32, 16, 8]
        },
        "ocr": {
            "capture_interval": 5.0,
            "min_confidence": 0.65
        }
    })
    
    print("Configuration files created")
    return true

func _create_default_config_file(file_path, default_config):
    var file = File.new()
    
    # Skip if file already exists
    if file.file_exists(file_path):
        return
    
    # Create file with default config
    var err = file.open(file_path, File.WRITE)
    if err != OK:
        _report_error("Failed to create config file: " + file_path)
        return false
    
    file.store_string(JSON.print(default_config, "  "))
    file.close()
    
    print("Created default config file: ", file_path)
    return true